@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>638</height>
+    <width>801</width>
+    <height>643</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -438,7 +438,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>801</width>
      <height>22</height>
     </rect>
    </property>
